Actions
Bug #1799
closedext/digest/sha2.c should be updated to fix an off-by-one bug
Bug #1799:
ext/digest/sha2.c should be updated to fix an off-by-one bug
Description
=begin
Current is version 1.0.0beta1 of Aaron Gifford's C-based implementation.
He has updated this to version 1.0 RELEASE which fixes a bug in SHA-256 hashing.
Details from http://www.aarongifford.com/computers/sha.html
=end
Updated by shyouhei (Shyouhei Urabe) about 17 years ago
- Status changed from Open to Assigned
- Assignee set to knu (Akinori MUSHA)
- Priority changed from Normal to 5
=begin
=end
Updated by knu (Akinori MUSHA) about 17 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
=begin
Applied in changeset r24415.
=end
Actions