* ext/digest/sha2/sha2.[ch]: Update to 1.0 RELEASE which fixes an   off-by-one bug in SHA-256 hashing.  Reduce differences from   the original while at it. [Bug #1799]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@24415 b2dd03c8-39d4-4d8f-98ff-823fe69b080e